/* Software Reference Documentation */

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -54,7 +54,7 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 * Device Software
 ** Low-Level
 *** [[u-boot]] - The bootloader we use, including docs to our modifications
-*** [[kernel]] - The Linux Kernel we use, including docs to our modifiations
+*** [[kernel]] - The Linux Kernel we use, including docs to our modifications
 ** Userspace
 *** [[gsmd]] - the GSM daemon managing the GSM Modem
 *** [[agpsd]] - the AGPS (Assisted GPS) daemon
