*Empty MediaWiki Message*

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -91,6 +91,9 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 * [[Buying Interest List]] - Have you have put money aside for Neo1973? Put your nick here.
 * [[Style Sheet]] - The '''''correct''''' way to spell OpenMoko and other words
 
+== FIC / OpenMoko at Events ==
+* [[FOSDEM]] - Bruseels, Belgium - 23 to 25 Februari 2007
+
 == Sections by target audience ==
 
 * [[Basic End-user]] - Information for end users that want basic functionality and no surprises
