/* FIC / OpenMoko at Events */

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -92,7 +92,7 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 * [[Style Sheet]] - The '''''correct''''' way to spell OpenMoko and other words
 
 == FIC / OpenMoko at Events ==
-* [[FOSDEM]] - Bruseels, Belgium - 23 to 25 Februari 2007
+* [[FOSDEM]] - Brussels, Belgium - 23 to 25 Februari 2007
 
 == Sections by target audience ==
 
