*Empty MediaWiki Message*

--- a/Events:FOSDEM_2007.mw
+++ b/Events:FOSDEM_2007.mw
@@ -1,13 +1,13 @@
 == OpenMoko at FOSDEM ==
 
-Sean of OpenMoko fame is going to be at [http://www.fosdem.org/2007/ FOSDEM] as a "normal" visitor. Maybe we should arrange an informal gathering one of the days? 
+Sean Moss-Pultz will be giving a presentation at FOSDEM:
+[http://fosdem.org/2007/schedule/events/embedded_openmoko Presentation]
+[http://fosdem.org/2007/schedule/speakers/sean+moss-pultz Presenter Profile]
 
-Seems like change of plans [http://fosdem.org/2007/schedule/events/embedded_openmoko OpenMoko event].
+Michael 'Mickey' Lauer will also be there, and mentioned:
+"The most prominent informal FOSDEM gathering is the Friday Beer Event at the Roy D'Espagne. A major part of the OpenEmbedded crowd will be there, as well."
 
-Mickey says: The most prominent informal FOSDEM gathering is the Friday Beer Event at the Roy D'Espagne. A major part of the OpenEmbedded crowd will be there, as well.
-
-
-== Fake it at FOSDEM ==
+== Fake it at FOSDEM Beer Event ==
 
 Quite a few OpenMoko enthusiasts will be meeting-up at the Friday Beer Event on Februari the 23rd. 
 http://www.fosdem.org/2007/beerevent
@@ -15,9 +15,7 @@ http://www.fosdem.org/2007/beerevent
 Sean mentioned being at the beer event himself, to quote the most important part of that exchange:
 {{{
     > Best place would be the beer event of fosdem. Friday evening. ;)
-
     Deal. Drinks will be on me!
-
     -Sean
 }}}
 
