*Empty MediaWiki Message*

--- a/Events:FOSDEM_2007.mw
+++ b/Events:FOSDEM_2007.mw
@@ -13,11 +13,11 @@ Quite a few OpenMoko enthusiasts will be meeting-up at the Friday Beer Event on 
 http://www.fosdem.org/2007/beerevent
 
 Sean mentioned being at the beer event himself, to quote the most important part of that exchange:
-{{{
+
     > Best place would be the beer event of fosdem. Friday evening. ;)
     Deal. Drinks will be on me!
     -Sean
-}}}
+
 
 
 Well... I can't remember Nokia ever buying me a beer...
@@ -49,7 +49,7 @@ All those poor sods who are still waiting for their NEO can '''FAKE IT''':
 
 Print the following PDF on stiff card, cut along the outline, and cut out the strap-hole, stick the two sides together and hang the resulting life-sized fake NEO from you FOSDEM neck-strap!
 
-http://87.66.4.9/neo.pdf
+[[Media:http://87.66.4.9/neo.pdf] ]
 
 In case you wonder what that looks like, here's a PNG of the same thing:
 
