/* People likely to attend the FOSDEM Beer Event (Please edit as needed): */

--- a/Events:FOSDEM_2007.mw
+++ b/Events:FOSDEM_2007.mw
@@ -37,8 +37,8 @@ So that we can get some idea of how many people to expect, please add your name 
  * Daniel Willmann
  * Thomas Marchesseau (btw for sure on saturday)
  * Marc-André Beck
+ * Koen Kooi
  * ...
-
 
 === How do we find each other? ===
 
