*Empty MediaWiki Message*

--- a/Events:FOSDEM_2007.mw
+++ b/Events:FOSDEM_2007.mw
@@ -49,12 +49,12 @@ All those poor sods who are still waiting for their NEO can '''FAKE IT''':
 
 Print the following PDF on stiff card, cut along the outline, and cut out the strap-hole, stick the two sides together and hang the resulting life-sized fake NEO from you FOSDEM neck-strap!
 
-[[Media:http://87.66.4.9/neo.pdf]]
+[[neo.pdf]]
 
 In case you wonder what that looks like, here's a PNG of the same thing:
 
 
-http://87.66.4.9/neo.png
+[[Image:neo.png]]
 
 
 Ohh ok, it's just a bit of nerdy fun...
