--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -90,6 +90,7 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 * [[Testimonials]] - How did you get to OpenMoko?
 * [[Buying Interest List]] - Have you have put money aside for Neo1973? Put your nick here.
 * [[Style Sheet]] - The '''''correct''''' way to spell OpenMoko and other words
+* [[iPhone]] -  Comparison between Apple iPhone and FIC Neo1973
 
 == FIC / OpenMoko at Events ==
 * [[FOSDEM]] - Brussels, Belgium - 23 to 25 Februari 2007
