*Empty MediaWiki Message*

--- a/Neo1973_compatible_cellphone_providers.mw
+++ b/Neo1973_compatible_cellphone_providers.mw
@@ -44,6 +44,13 @@ This is a breakdown of OpenMoko-compatible providers around the world. Please he
 * [http://www.orange.ro Orange]
 * [http://www.cosmorom.com Cosmorom]
 
+== Czech Republic ==
+
+* [http://www.vodafone.cz/ Vodafone]
+* [http://www.cz.o2.com/ o2]
+* [http://www.t-mobile.cz/ T-mobile]
+
+
 == Rest of World (Africa, Asia, Australia, Europe, South America) ==
 
 * almost all use GSM thus they are compatible
