--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -94,6 +94,7 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 
 == FIC / OpenMoko at Events ==
 * [[FOSDEM]] - Brussels, Belgium - 23 to 25 Februari 2007
+* [http://pingwinaria.linux.org.pl/PLUG/imprezy/pingwinaria/2007/agenda Pingwinaria] - Krynica, Poland - 15-18 March 2007 - Tomasz Zieliński will give a talk about OpenMoko and Marcin Juszkiewicz will talk about OpenEmbedded
 
 == Sections by target audience ==
 
