--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -91,6 +91,7 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 * [[Buying Interest List]] - Have you have put money aside for Neo1973? Put your nick here.
 * [[Style Sheet]] - The '''''correct''''' way to spell OpenMoko and other words
 * [[iPhone]] -  Comparison between Apple iPhone and FIC Neo1973
+* [[Translation]] -  Translation of OpenMoko
 
 == FIC / OpenMoko at Events ==
 * [[FOSDEM]] - Brussels, Belgium - 23 to 25 Februari 2007
