/* LASER keyboard (can be a full QWERTY keyboard) */  tidy

--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -76,9 +76,16 @@ I want a 3.5mm jack. The only problem is - are headsets widely available in the 
 *cheap clippable miniusb keyboard
 
 =====LASER keyboard (can be a full QWERTY keyboard)=====
-*someone knowing sth about the price?
-**This doesn't sound like it is likely to be cheap, and (at least for myself) I'm looking for a phone/pda/mp3 player, not for a very bad personal computer with a tiny screen that I can barely read. If it were cheap enough, I suppose it would not be a problem, but I doubt I'd pay a premium for it...--[[User:Perry|Perry]] 14:52, 15 February 2007 (CET)
-**I see. I thought sth. like that. In my opinion it would be better to implement an IrDA connector or use the bluetooth interface to connect to a small keyboard. So you could use it if you want but not everyone has to pay the price for such an exclusive feature --[[User:Denis std|denis_std]] 19:47, 15 February 2007 (CET)
+*On the hardware side, this would require a $5 laser diode, a $3 (in bulk) custom diffraction grating, and probably a couple of cubic centimetres volume inside the phone.
+*This requires a camera pointable to the front.
+*It requires an integrated stand for the phone.
+*To practically use this, you've got to be 40cm or so away from the phone, which means under 25*20 of text resolution.
+*In software, it's relatively easy to parse the camera output, to find changes in the known laser field.
+
+There are major problems. 
+*Patent issues. 
+*No tactile response at all, which slows typing.
+*An extra 2cc/6g.
 
 =====EDGE support=====
 
