--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -96,6 +96,7 @@ There are major problems.
 **The tag could be switched on or off. A nice feature would be a module able to clone tags. This would unfortunately probably be rather expensive.
 **What about an RFID Reader which could be used to locate items with RFID tags (IE: in your house) [[User:Alexpb|Alexpb]]
 ***That would be a nice feature--[[User:Denis std|denis_std]] 08:33, 17 February 2007 (CET)
+***Most tags can only be located within 10cm or so. Essentially no cheap tags can be located over several metres.--[[User:Speedevil|Speedevil]] 13:17, 18 February 2007 (CET)
 
 ===== USB 2.0 =====
 * Powered
