/* MMC/SD/SDIO slot (rather than?) miniSD or microSD */ tidy

--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -58,13 +58,11 @@ I want a 3.5mm jack. The only problem is - are headsets widely available in the 
 *VGA, standard Jack (line in & out), standard USB
 
 =====MMC/SD/SDIO slot (rather than?) miniSD or microSD=====
-*Cheaper cards
-*More durable cards
+*Cheaper, more durable cards in a widely accepted format.
 *Cards are harder to lose
 *Wider selection of accesories, including SDIO accessories.
-*More widely accepted format
-*Only because CF takes too much room (or CF would be the wish, instead)
 *Make externally available so that larger length SDIO cards can be used (thinking about SDIO WLAN here)
+*Only because CF takes too much room (or CF would be the wish, instead)
 
 =====[[Expansion Back]]=====
 * Replacement backs with additional features
