--- a/Translation.mw
+++ b/Translation.mw
@@ -47,7 +47,7 @@ Languages already offered on our community mailinglist, please add your name you
 == German ==
 * [[User:RobertMichel|Robert Michel]]
 * [[User:FabianOff|Fabian Off]]
-* [[User:Denis_M|Denis M]]
+* [[User:Denis std|Denis]]
 * Lars C.
 
 == Hebrew ==
