--- a/Connecting_GTA01Bv2_with_Debug_Board.mw
+++ b/Connecting_GTA01Bv2_with_Debug_Board.mw
@@ -1,7 +1,7 @@
 [[Image:Debug board connector closed.jpg|thumb|600px|connector closed]]
 [[Image:Debug board connector open.jpg|thumb|600px|connector open]]
 [[Image:Debug board connector open with cable.jpg|thumb|600px|connector open with cable inserted]]
-[[Image:Debug board connector closed with cable.jpg|thumb|600px|connector open with cable inserted]]
+[[Image:Debug board connector closed with cable.jpg|thumb|600px|connector closed with cable inserted]]
 [[Image:Gta01b v2 debugport closed.jpg|thumb|600px|GTA01 connector closed]]
 [[Image:Gta01b v2 debugport open.jpg|thumb|600px|GTA01 connector open]]
 [[Image:Gta01b v2 debugport open with cable.jpg|thumb|600px|GTA01 connector open with cable inserted]]
