/* Q: Can the Neo charge and use devices on a USB hub at the same time? */

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -78,15 +78,22 @@ footprint reasons.
 
 === Q: Can the Neo charge and use devices on a USB hub at the same time? ===
 
-A: When the Neo is connected to a DOWNSTREAM port of a powered USB hub, it will start charging. 
-It will also be able to access all devices connected to the hub while charging.
+A: When the Neo is connected to a device port of a powered USB hub, it will start charging. 
 
-If you plug the Neo into an UPSTREAM port of any powered USB hub,
-you can access any (low-speed,full-speed) usb device on that hub but the NEO will not charge.
-This is because UPSTREAM ports on USB hubs are not powered.
+If you plug the Neo into the host port of any powered USB hub 
+you can access any (low-speed,full-speed) usb device on that hub but the Neo will not charge. (Some/many USB hubs will not accept an unpowered host as valid)
+This is because host socket on USB hubs are not powered.
 
 FIC product development is looking into providing something that
 conveniently solves this problem.
+
+This can bs simply a three headed cable.
+
+One end plugs into the Neo. One end plugs into a device port of a powered hub, or the Neo charger. One end plugs into the host port of a hub.
+
+The Charger/USB device plug only has +5V and 0V connected in the simple cable, which are connected to the other ends.
+
+For a more complex cable, when the host socket is not plugged in, the cable acts as a simple USB cable.
 
 === Q: What are the details of the USB port on the Neo1973? How does it compare to USB On-The-Go? ===
 
