--- a/FAQ.mw
+++ b/FAQ.mw
@@ -78,16 +78,18 @@ footprint reasons.
 
 === Q: Can the Neo charge and use devices on a USB hub at the same time? ===
 
-A: When the Neo is connected to a device port of a powered USB hub, it will start charging. 
+A: 
+*When the Neo is connected to a device port on a USB hub, it will start charging. If the hub is a powered hub, then it will charge fast (3h), otherwise around 12h.
 
-If you plug the Neo into the host port of any powered USB hub 
-you can access any (low-speed,full-speed) usb device on that hub but the Neo will not charge. (Some/many USB hubs will not accept an unpowered host as valid)
-This is because host socket on USB hubs are not powered.
+*If you plug the Neo into the host port of a USB hub you can use devices on that hub but the Neo will not charge. (Some/many USB hubs will not accept an unpowered host as valid, hence the need for the below cable.)
+*This is because the host socket on USB hubs is not powered.
 
 FIC product development is looking into providing something that
 conveniently solves this problem.
 
-This can bs simply a three headed cable.
+The USB port on the Neo is not a properly compliant USB host port, all USB host ports must provide 5V - though powered devices or hubs may not draw any current from this, they may refuse to work. (The Belkin Tetrahub is an example of a hub that will not work.)
+
+One solution is a three headed cable.
 
 One end plugs into the Neo. One end plugs into a device port of a powered hub, or the Neo charger. One end plugs into the host port of a hub.
 
