--- a/Neo_1973_hardware.mw
+++ b/Neo_1973_hardware.mw
@@ -128,7 +128,7 @@ There's a WM8753 Wolfson Microelectronics CODEC (This is not a 'smart' codec tha
 
 ==== Stereo Amplifier ====
 
-There's a National Semiconductor LM4857 Stereo Amplifier at the analog audio output of the WM8753
+There's a National Semiconductor [[LM4857]] Stereo Amplifier at the analog audio output of the WM8753
 
 * Product Homepage: http://www.national.com/pf/LM/LM4857.html
 * Data Sheet: http://www.national.com/ds.cgi/LM/LM4857.pdf
