*Empty MediaWiki Message*

--- a/Applications.mw
+++ b/Applications.mw
@@ -24,6 +24,7 @@ Although [[OpenMoko]] is designed for smartphones that use a stylus, it would be
 === 1st Phase ===
 * [[Music Player]]
 * [[Screen Saver]]
+* [[Dialer]] with [[Least Cost Routing]] for international calling
 
 === 2nd Phase ===
 * [[Clocks]]
