/* People likely to attend the FOSDEM Beer Event (Please edit as needed): */

--- a/Events:FOSDEM_2007.mw
+++ b/Events:FOSDEM_2007.mw
@@ -38,6 +38,7 @@ So that we can get some idea of how many people to expect, please add your name 
 * Thomas Marchesseau (btw for sure on saturday)
 * Marc-André Beck
 * Koen Kooi
+* Ole Tange
 * ...
 
 === How do we find each other? ===
