/* How do we find each other? */

--- a/Events:FOSDEM_2007.mw
+++ b/Events:FOSDEM_2007.mw
@@ -50,7 +50,7 @@ All those poor sods who are still waiting for their NEO can '''FAKE IT''':
 
 Print the following PDF on stiff card, cut along the outline, and cut out the strap-hole, stick the two sides together and hang the resulting life-sized fake NEO from you FOSDEM neck-strap!
 
-[http://87.66.4.9/neo.pdf neo.pdf]
+[http://87.66.4.9/neo.pdf neo.pdf] [[Media:Neo.pdf]]
 
 In case you wonder what that looks like, here's a PNG of the same thing:
 
@@ -59,3 +59,7 @@ In case you wonder what that looks like, here's a PNG of the same thing:
 
 
 Ohh ok, it's just a bit of nerdy fun...
+
+It seems I'm not the only one who likes faking it, Ole Tange put together something similar here:
+
+[[Media:Neo1973-doll.pdf]]
