*Empty MediaWiki Message*

--- a/Events:FOSDEM_2007.mw
+++ b/Events:FOSDEM_2007.mw
@@ -60,8 +60,8 @@ In case you wonder what that looks like, here's a PNG of the same thing:
 
 Ohh ok, it's just a bit of nerdy fun...
 
----
+----
 
-It seems I'm ( richardB ) not the only one who likes faking it, OleTange put together something similar here:
+It seems [[User:RichardB|I'm]] not the only one who likes faking it, [[User:OleTange|Ole Tange]]  put together something similar here:
 
 [[Media:Neo1973-doll.pdf]]
