*Empty MediaWiki Message*

--- a/Applications.mw
+++ b/Applications.mw
@@ -24,6 +24,7 @@ Although [[OpenMoko]] is designed for smartphones that use a stylus, it would be
 * [[Music Player]]
 * [[Screen Saver]]
 * [[Dialer]] with [[Least Cost Routing]] for international calling
+* [[Headset Emulator]]
 
 === 2nd Phase ===
 * [[Clocks]]
