--- a/Translation.mw
+++ b/Translation.mw
@@ -34,6 +34,7 @@ Languages already offered on our community mailinglist, please add your name you
 == Dutch == 
 * [[User:MarcVerwerft|Marc Verwerft]]
 * [[User:MarcelDeJong|Marcel De Jong]]
+* [[User:OliverH|Oliver Heesakkers]]
 
 == Finnish == 
 * [[User:Jani-Matti_Hätinen|Jani-Matti Hätinen]]
