/* People likely to attend the FOSDEM Beer Event (Please edit as needed): */

--- a/Events:FOSDEM_2007.mw
+++ b/Events:FOSDEM_2007.mw
@@ -40,6 +40,7 @@ So that we can get some idea of how many people to expect, please add your name 
 * Marc-André Beck
 * Koen Kooi
 * Ole Tange
+* Matthias 'greentux' Lemke
 * ...
 
 === How do we find each other? ===
