--- a/Neo_1973_Battery_Charging_Logic.mw
+++ b/Neo_1973_Battery_Charging_Logic.mw
@@ -1,13 +1,13 @@
-The battery charging logic is embedded into our [[Neo1973_Hardware#Power_Management|PCF50606 PMU]] (Power Management Unit).
+The [[battery]] charging logic is embedded into our [[Neo1973_Hardware#Power_Management|PCF50606 PMU]] (Power Management Unit).
 
-The PCF50606 suppors a variety of battery charging modes, based around the hardware limitations of USB.
+The PCF50606 supports a variety of [[battery]] charging modes, based around the hardware limitations of USB.
 
 USB hubs may only provide up to 100mA per device.
 If more than the available current is drawn from them, they may be reset, or power off.
 This resets all devices connected to the USB bus, possibly causing data loss.
 So, fast charge mode is only enabled after the Neo is told that it is safe to charge at this current. Or optionally if there is no communication from the host for 30 seconds - as may be the case with dumb 'USB chargers'.
 
-{{warning|While we have spent a significant amount on various safe-guards such as battery-internal overcurrent/overvoltage protection, manual twisting with low-level charger control aspects is not recommended.  It might render either the battery or the charging circuit damaged.}}
+{{warning|While we have spent a significant amount on various safe-guards such as battery-internal overcurrent/overvoltage protection, manual twisting with low-level charger control aspects is not recommended.  It might render either the [[battery]] or the charging circuit damaged.}}
 
 == Charging Modes ==
 
@@ -15,7 +15,7 @@ So, fast charge mode is only enabled after the Neo is told that it is safe to ch
 
 Pre Charge is how the PMU calls the charging mode in which we draw up to 100mA charging current from the USB socket.  This mode is safe to use on any USB socket, since USB per specification always can supply at least 100mA on every downstream facing port.
 
-However, 100mA charging at a 1200mAh battery means 12hrs charging time, not very practical at all.
+However, 100mA charging at a 1200mAh [[battery]] means 12hrs charging time, not very practical at all.
 
 === Fast Charge ===
 
