--- a/Building_OpenMoko_2007.1_from_scratch.mw
+++ b/Building_OpenMoko_2007.1_from_scratch.mw
@@ -2,6 +2,8 @@
  |__TOC__
  |}
 
+{{warning|This is still a preliminary version, which will take some more days until it has all the updates.}}
+
 This is a guide describing how to set up a running OpenMoko
 system from scratch.
 
@@ -135,13 +137,13 @@ First, we obtain a snapshot of the OpenEmbedded-based tree used by OpenMoko, plu
 ==== Obtaining OpenMoko SVN tree ====
 '''(Role: BUILD)'''
 
-Obtain revision 1004 of the OpenMoko tree. This is a "known to be good", version (provided the fixes below are applied). Unfortunately, at some places, "current" versions of upstream packages may get included, thus the build may still fail. If it does, you may wish to inform the authorities.
+Obtain revision 1003 of the OpenMoko tree. This is a "known to be good", version (provided the fixes below are applied). Unfortunately, at some places, "current" versions of upstream packages may get included, thus the build may still fail. If it does, you may wish to inform the authorities.
 
 The checkout should take about 45 minutes over an Internet connection with a round-trip time to svn.openmoko.org of 350 ms.
 
 <pre>
 cd $OMDIR
-svn co -r 1004 http://svn.openmoko.org/ openmoko
+svn co -r 1003 http://svn.openmoko.org/ openmoko
 </pre>
 
 ==== Installing BitBake ====
