add link to project page

--- a/MokoMakefile.mw
+++ b/MokoMakefile.mw
@@ -20,3 +20,7 @@ This will set up the recommended directory structure as described in [[Building 
 Once you have done this, you can choose to continue using the MokoMakefile to initiate your subsequent builds, or you can go into the build directory and run bitbake commands manually.  The choice is yours.
 
 MokoMakefile is recommended by 1 out of 1 new developer on #openmoko, who said "For some reason last night I couldn't get my manual install of everything to work (bb complained about my bbpath I think) ... but with your makefile, it works great!"
+
+
+Project page:
+http://mokomakefile.projects.openmoko.org/
