--- a/I2C.mw
+++ b/I2C.mw
@@ -1,2 +1,15 @@
 I2C is a simple communication standard intended to move small amounts of data a few inches between chips.
 See [http://en.wikipedia.org/wiki/i2c wikipedia].
+
+We currently use the following addresses on the I2C bus:
+{|
+| '''Device''' || '''I2C address'''
+|-
+| PCF50606 || 0001 000x
+|-
+| WM8753L  || 0011 010x
+|-
+| LM4857   || 1111 100x
+|}
+
+Note that I2C addresses are 7 bit. The last bit, which is not part of the address, indicates whether this is a read or write operation. So "0001 000x" is 0x8, not 0x10.
