--- a/Translation.mw
+++ b/Translation.mw
@@ -71,7 +71,7 @@ Languages already offered on our community mailinglist, please add your name you
 
 == Russian ==
 * [[User:OlegSverdlov|Oleg Sverdlov]]
-* Denis Kot
+* [[User:DenisBY|Denis Kot]]
 * [[User:MikhailGusarov|Mikhail Gusarov]]
 
 == Spanish ==
