/* first-stage */  typo

--- a/NAND_bad_blocks.mw
+++ b/NAND_bad_blocks.mw
@@ -45,7 +45,7 @@ The boot loader itself contains a small first-stage boot loader for the [[S3C241
 
 This code (mostly written in ARM assembly) was altered to detect and skip bad blocks.  This means, the first stage bootloader can itself extend over bad blocks.  
 
-This also menas that the  flashing routine needs to detect and skip bad blocks, resulting in a u-boot image that can have gaping holes ;)  The existing "traditional" [[sjf2410-linux]] JTAG flashing program is not detecting bad blocks (Note: this might be changed through a compile option, see below)
+This also means that the  flashing routine needs to detect and skip bad blocks, resulting in a u-boot image that can have gaping holes ;)  The existing "traditional" [[sjf2410-linux]] JTAG flashing program is not detecting bad blocks (Note: this might be changed through a compile option, see below)
 
 ==== Environment ====
 
