/* NAND basics */  guaranteed minimum erase.

--- a/NAND_bad_blocks.mw
+++ b/NAND_bad_blocks.mw
@@ -6,7 +6,7 @@ NAND memory has quite unique characteristics.
 * You can change as many bits as you want to '0'
 * You cannot set a bit back to '1' by using a regular write.  You have to erase a whole '''erase block''' to do so
 * The number of erase cycles per block is limited.  Once you have reached the limit, some bits will not get back to 0xff
-
+** In the case of the chip in the Neo1973, this is 100000 guaranteed per-block erase cycles.
 === NAND page ===
 
 A NAND page consists of a number of data bytes (512 in the Neo1973 case) plus a number of out-of-band (OOB) bytes (16 in the Neo1973 case).
