/* Ability to insert more than one Sim-Card and (if possible) connect to more than one network at the same time */

--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -89,6 +89,8 @@ There are major problems.
 
 =====Ability to insert more than one Sim-Card and (if possible) connect to more than one network at the same time=====
 
+- This could be achieved via a specialist dual sim card kit (currently on market)- where two sims are trimmed and combined on one card, software support for dual sims would need providing...
+
 =====RFID tag=====
 *Advantages of a RFID tag? I would see a lot privacy problems
 **The tag could be switched on or off. A nice feature would be a module able to clone tags. This would unfortunately probably be rather expensive.
