--- a/Neo_1973_OpenOCD.mw
+++ b/Neo_1973_OpenOCD.mw
@@ -27,7 +27,7 @@ OpenOCD Revision 82 and later have been proven to work with our [[QT2410]] and [
 
 [[User:HaraldWelte]] has provided a [http://people.gta01.hmw-consulting.de/laforge/misc/openocd.cfg openocd.cfg configuration file] for use of OpenOCD with wiggler and the QT2410 target board. 
 
-== Known Bugs ==
+== Known Bugs and Troubleshooting ==
 
 === CP15 register read/write of ARM920T core not working ===
 
