added powering up and "JTAG communication failure"

--- a/Neo_1973_OpenOCD.mw
+++ b/Neo_1973_OpenOCD.mw
@@ -33,12 +33,25 @@ OpenOCD Revision 82 and later have been proven to work with our [[QT2410]] and [
 
 This has been reported upstream. Bugfix pending.
 
+=== Did you turn it on ? ===
+
+An easily made but devastating mistake is to forget to actually activate the CPU. Just connecting power is not enough !
+Press and hold the power button until the boot loader does its count-down, or, in case there is no runnable boot loader,
+the CPU keeps itself busy.
+
 === number of discovered devices in JTAG chain doesn't match configuration ===
 
 You get something like:
  Error:   jtag.c:1224 jtag_examine_chain(): number of discovered devices in JTAG chain (51) doesn't match configuration (1)
 
 This seems like a libftdi initialization bug.  Sometimes the FT2232 doesn't get completely reset into a sane state at startup of OpenOCD.  Please unplug the USB cable from the [[Amontec JTAGkey]] / [[Debug Board]] and re-plug.  It should immediately work the next time.  Bugfix would be appreciated a lot!
+
+=== JTAG communication failure ===
+
+Another common error is this one:
+ JTAG communication failure, check connection, JTAG interface, target power etc.
+
+Also this one is fixed by unplugging and re-plugging USB.
 
 == OpenOCD and [[Debug Board]] ==
 
