/* Ability to insert more than one Sim-Card and (if possible) connect to more than one network at the same time */

--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -89,7 +89,8 @@ There are major problems.
 
 =====Ability to insert more than one Sim-Card and (if possible) connect to more than one network at the same time=====
 
-- This could be achieved via a specialist dual sim card kit (currently on market)- where two sims are trimmed and combined on one card, software support for dual sims would need providing...
+* This could be achieved via a specialist dual sim card kit (currently on market)- where two sims are trimmed and combined on one card, software support for dual sims would need providing...
+* What about twin-SIMs (SIMs with 2 phone lines registered on them)? Conventional GSM phones have an option to switch between the two, older ones use # (long press before dialling) to do that. I'm guessing Calypso should support it, we just need to provide an interface for it :-) --[[User:Csdexter|@Dexter]] 11:34, 19 February 2007 (CET)
 
 =====RFID tag=====
 *Advantages of a RFID tag? I would see a lot privacy problems
