explicitly mark the current I2C configuration as for the Neo1973

--- a/I2C.mw
+++ b/I2C.mw
@@ -1,7 +1,8 @@
 I2C is a simple communication standard intended to move small amounts of data a few inches between chips.
 See [http://en.wikipedia.org/wiki/i2c wikipedia].
 
-We currently use the following addresses on the I2C bus:
+== Neo1973 ==
+On the Neo1973, we currently use the following addresses on the I2C bus:
 {|
 | '''Device''' || '''I2C address'''
 |-
