--- a/Neo_1973_Battery_Charging_Logic.mw
+++ b/Neo_1973_Battery_Charging_Logic.mw
@@ -1,4 +1,4 @@
-The [[battery]] charging logic is embedded into our [[Neo1973_Hardware#Power_Management|PCF50606 PMU]] (Power Management Unit).
+The [[Neo1973 Battery]] charging logic is embedded into our [[Neo1973 Hardware#Power_Management|PCF50606 PMU]] (Power Management Unit).
 
 The PCF50606 supports a variety of [[battery]] charging modes, based around the hardware limitations of USB.
 
@@ -15,10 +15,16 @@ So, fast charge mode is only enabled after the Neo is told that it is safe to ch
 
 Pre Charge is how the PMU calls the charging mode in which we draw up to 100mA charging current from the USB socket.  This mode is safe to use on any USB socket, since USB per specification always can supply at least 100mA on every downstream facing port.
 
-However, 100mA charging at a 1200mAh [[battery]] means 12hrs charging time, not very practical at all.
+However, 100mA charging at a 1200mAh [[Neo1973 Battery]] means 12hrs charging time, not very practical at all.
 
 === Fast Charge ===
 
 Fast Charge is how the PMU calls the charging mode in which we draw up to 500mA charging current from the USB socket.  This mode can only be used if the USB stack on the host controller has selected a '''USB Configuration''' in which the device exports the need for 500mA.
 
 Thus, by default, if you apply +5V to the USB device socket, we draw only 100mA.  After a host controller has issued SET_CONFIGURATION config request on a configuration with 500mA in the config descriptor, the Neo1973 software ([[kernel]]) enable the fast charging mode.
+
+==== Fast Charge (CCCV) ====
+
+Fast charging, using first constant current, later constant voltage.  This is what we use for our Li-Ion [[Neo1973 battery]]
+
+==== Fast Charge (CVCC) ====
