change references from battery -> Neo1973 battery

--- a/Disassembling_Neo_1973.mw
+++ b/Disassembling_Neo_1973.mw
@@ -38,8 +38,8 @@ In the middle is the touchscreen LCD, the touchscreen printed wire can be seen b
 This shows:
 *At the top on a green board, the bluetooth module, and the square bluetooth antenna.
 *The headset jack is to the right of this.
-**Immediately below the headset jack is the [[battery]] connector.
-**Below the [[battery]] connector, the two gold pads feed the vibrator motor.
+**Immediately below the headset jack is the [[Neo1973 Battery]] connector.
+**Below the [[Neo1973 Battery]] connector, the two gold pads feed the vibrator motor.
 *To the right of the headset jack is the left speaker connector.
 
 On the other side of the PCB, going from bottom-right corner down-left.
