/* Getting started with this wiki */

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -107,6 +107,7 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 
 == Getting started with this wiki ==
 
+* Please read our [[OpenMoko Wiki Editing Guidelines]]
 * [http://www.mediawiki.org/wiki/Help:Configuration_settings Configuration settings list]
 * [http://meta.wikimedia.org/wiki/Help:Wikitext_reference MediaWiki Wikitext Reference]
 * [http://www.mediawiki.org/wiki/Help:FAQ MediaWiki FAQ]
