--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -93,6 +93,7 @@ There are major problems.
 * What about twin-SIMs (SIMs with 2 phone lines registered on them)? Conventional GSM phones have an option to switch between the two, older ones use # (long press before dialling) to do that. I'm guessing Calypso should support it, we just need to provide an interface for it :-) --[[User:Csdexter|@Dexter]] 11:34, 19 February 2007 (CET)
 
 =====RFID tag=====
+* Implementation/Cooperation with: [http://www.rfidguardian.org/ RFID-Guardian]
 *Advantages of a RFID tag? I would see a lot privacy problems
 **The tag could be switched on or off. A nice feature would be a module able to clone tags. This would unfortunately probably be rather expensive.
 **What about an RFID Reader which could be used to locate items with RFID tags (IE: in your house) [[User:Alexpb|Alexpb]]
