--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -146,6 +146,11 @@ The most expensive - and they are very expensive - ones produce UV of a sort tha
 IIRC the LEDs are $20 per.
 --[[User:Speedevil|Speedevil]] 15:11, 16 February 2007 (CET)
 
+=====Teleportation=====
+Implementing a beaming-device to the Neo would make it the first phone enabling teleportation.
+See: [http://news.bbc.co.uk/1/hi/sci/tech/3811785.stm]
+Possible implementation difficulties might be the lacking teleportation-support in the GSM standard as well as uncooperative mobile service providers that feel uneasy towards innovative technologies...
+
 =====EPD=====
 
 Or electronic paper display, EPD is used in many new devices such as the new Motorola motofone, sonys new e-reader and Irex's iliad. The technology provides thin, flexible, power saving screens using new eink technology. This technology could cut the weight of the phone and its power usage. For more info see: [http://www.eink.com eink's website].
