--- a/Neo1973_compatible_cellphone_providers.mw
+++ b/Neo1973_compatible_cellphone_providers.mw
@@ -26,7 +26,7 @@ This is a breakdown of OpenMoko-compatible providers around the world. Please he
 * Please add to the list.
 
 == Germany ==
-
+All: 
 * [http://www.vodafone.de/ Vodafone]
 * [http://www.o2online.de/ o2]
 * [http://www.eplus.de/ E-Plus]
