--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -154,3 +154,7 @@ Possible implementation difficulties might be the lacking teleportation-support 
 =====EPD=====
 
 Or electronic paper display, EPD is used in many new devices such as the new Motorola motofone, sonys new e-reader and Irex's iliad. The technology provides thin, flexible, power saving screens using new eink technology. This technology could cut the weight of the phone and its power usage. For more info see: [http://www.eink.com eink's website].
+
+=====FM/Digital Radio(DAB) Reciever=====
+
+A nice feature would be a radio reciever: FM or even better: [http://en.wikipedia.org/wiki/Digital_Audio_Broadcasting Digital Audio Broadcast] (Digital Radio)
