--- a/Wishlist%2FComputer_Mouse.mw
+++ b/Wishlist%2FComputer_Mouse.mw
@@ -25,3 +25,11 @@ With a 3D accelerometer the smartphone can even be used as a 3D mouse. Again an 
 A 3D accellerometer cannot easily be used as a 3 axis mouse. The problem is that there are 6 degrees of freedom to the movement of the phone - roll, pitch, yaw, X,Y,Z translation.
 
 Decoupling the position information, when you have no orientation information is impossible. Compromises that sort-of-work can be done, but not well.
+
+
+==Implementation Ideas==
+
+There is already usefull software for using a mobile as a remote for your computer.<br>
+See: [http://bemused.sourceforge.net/ bemused] - FOSS remote controll for Series 60/UIQ with some skins and plugins and implementations<br>
+See: [http://irowan.com/romeo/ romeo] - FOSS remote controll for Mac and Sony Ericsson so far<br>
+Or: Use VLC as a remote - AFAIK there is even a J2ME(JavaMicroedition) VLC implementation
