--- a/Wishlist%2FComputer_Mouse.mw
+++ b/Wishlist%2FComputer_Mouse.mw
@@ -32,4 +32,4 @@ Decoupling the position information, when you have no orientation information is
 There is already usefull software for using a mobile as a remote for your computer.<br>
 See: [http://bemused.sourceforge.net/ bemused] - FOSS remote controll for Series 60/UIQ with some skins and plugins and implementations<br>
 See: [http://irowan.com/romeo/ romeo] - FOSS remote controll for Mac and Sony Ericsson so far<br>
-Or: Use VLC as a remote - AFAIK there is even a J2ME(JavaMicroedition) VLC implementation
+Or: Use VLC as a remote - AFAIK there is even a J2ME(JavaMicroedition) VLC implementation<br>--[[User:Minime|Minime]] 13:59, 19 February 2007 (CET)
