/* Type of DFU Download */

--- a/USB_DFU_-_The_USB_Device_Firmware_Upgrade_standard.mw
+++ b/USB_DFU_-_The_USB_Device_Firmware_Upgrade_standard.mw
@@ -18,7 +18,7 @@ The DFU implementation is part of our version of the [[u-boot]] [[Bootloader]]. 
 
 ==== Type of DFU Download ====
 
-The Neo1973 has enough SDRAM to accomodate a download mechanism according to Chapter 6.1 Mechanism "1." (to receive the entire image into a buffer and perform the actual programming during the manifesetation phase).  Thus, we can first transfer the firmware, then do checksum verification, and finally flash it into the NAND flash.
+The Neo1973 has enough SDRAM to accomodate a download mechanism according to Chapter 6.1 Mechanism "1." (to receive the entire image into a buffer and perform the actual programming during the manifestation phase).  Thus, we can first transfer the firmware, then do checksum verification, and finally flash it into the NAND flash in one go.
 
 ==== USB DFU Interfaces ====
 
