/* Accelerometer */ fixup links

--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -33,11 +33,11 @@ Some small hardware enhancement could be cheap, but very useful. Please add your
 =====Accelerometer===== 
 This enables the phone to sense where 'down' is - to enable various options.
 
-*[[3D Viewport]]
-*[[Auto Align Map]]
-*[[Computer Mouse]]
-*[[Determine Position]]
-*[[Distance Measuring]]
+*[[Wishlist:3D Viewport|3D Viewport]]
+*[[Wishlist:Auto Align Map|Auto Align Map]]
+*[[Wishlist:Computer Mouse|Computer Mouse]]
+*[[Wishlist:Determine Position|Determine Position]]
+*[[Wishlist:Distance Measuring|Distance Measuring]]
 Change playlists when I'm jogging vs walking. (there ia an mp3 player on the market that does this).
 *Can't the GPS information be used for that purpose? It should be possible to derive the phone's velocity from the change in coordinates over time, so such a playlist profile switcher should be a possibility even now already. [[User:Abraxa|Abraxa]] 00:09, 18 February 2007 (CET)
 **Yeah in my opinion that is a very cool idea. But for that case the device should be much lighter. I wouldn't go jogging with a device with this size.--[[User:Denis std|denis_std]] 01:01, 18 February 2007 (CET)
