added wishlist template

--- a/Wishlist%2FSoftware:Ambient_Noise_Detection.mw
+++ b/Wishlist%2FSoftware:Ambient_Noise_Detection.mw
@@ -1,3 +1,5 @@
+{{Wishlist}}
+
 == Ambient noise dependent ringing volume ==
 Ringing volume is dependent on the ambient noise. Adjust the ring tone volume to be heard over the background noise. I.e. ring nice and quietly (or on vibrate) when in a quiet library, or ring at full volume when in a noisy bar.
 
