added wishlist template

--- a/Wishlist%2FComputer_Mouse.mw
+++ b/Wishlist%2FComputer_Mouse.mw
@@ -1,3 +1,4 @@
+{{Wishlist}}
 == Using the smartphone as a computer mouse ==
 
 With an accelerometer the smartphone can detect how much it is being moved. It can therefore be used as a computer mouse. The communication can be either USB (using the normal USB mouse protocol) or BlueTooth (is there a normal BlueTooth protocol for the existing BlueTooth mice?).
