added wishlist template

--- a/Wishlist%2FGraphics_Tablet.mw
+++ b/Wishlist%2FGraphics_Tablet.mw
@@ -1,3 +1,4 @@
+{{Wishlist}}
 The Neo1973 has a touchscreen. The touchscreen can be used to control a pointer on the screen. Using communication to a PC the touchscreen can control the pointer on the PC. The communication can be either USB or Bluetooth. Using this it should be possible to emulate a simple graphics tablet.
 
 == Option: Display screen on smartphone ==
