/* Option: Pressure sensitivity */  multitouch?

--- a/Wishlist%2FGraphics_Tablet.mw
+++ b/Wishlist%2FGraphics_Tablet.mw
@@ -9,5 +9,7 @@ Depending on the bandwidth it may be possible to replicate either part of or a s
 
 The Neo1973 has a screen that is capable of multitouch, only the driver is missing. If multitouch is available, then pressure sensitivity may be possible: The harder you press the finger, the bigger the area your finger covers. If the sensitivity is really good you may be able to use a brush directly on the screen. The physical brush will also provide the tilt functionality.
 
+Cite? It's been stated that later versions may do multitouch, where is it metioned that this one can, which would be great? 
+--[[User:Speedevil|Speedevil]] 15:05, 19 February 2007 (CET)
 
 [[Category:ideas]]
