added wishlist template

--- a/Wishlist%2FHuman_screening.mw
+++ b/Wishlist%2FHuman_screening.mw
@@ -1,5 +1,4 @@
-
-
+{{Wishlist}}
 Phone spam is when a computer dials your number and when you take the call a recorded message is played. Phone spam is not that widespread yet, but will probably be when flat rate phones (such as VoIP to VoIP calls) become more widespread.
 
 To fight phone spam a human screening facility could be included: The phone owner will record a riddle that the caller will have to solve before being let through. If the caller cannot solve the riddle the call will be diverted to voice mail or dropped entirely.
