--- a/Wishlist%2FSynchronized_High_Quality_Recording.mw
+++ b/Wishlist%2FSynchronized_High_Quality_Recording.mw
@@ -1,3 +1,4 @@
+{{Wishlist}}
 == The problem ==
 
 If you do a phone interview the sound quality of interviewed will be limited by the sound quality of the phone. This can be improved by having a high quality recording done locally in both ends, followed by mixing the 2 high quality recordings. One of the problems by doing this is to synchronize the high quality recordings, so they start at the same time.
