added wishlist template

--- a/Wishlist%2FProfiles.mw
+++ b/Wishlist%2FProfiles.mw
@@ -1,3 +1,4 @@
+{{Wishlist}}
 A profile is a set of configurations that determine how the phone handle different events. Example of profiles include:
 
 * Airplane profile (No radio activity)
