--- a/Translation.mw
+++ b/Translation.mw
@@ -33,7 +33,7 @@ Languages already offered on our community mailinglist, please add your name you
 
 == Dutch == 
 * [[User:MarcVerwerft|Marc Verwerft]]
-* [[User:MarcelDeJong|Marcel De Jong]]
+* [[User:Madjo|Marcel De Jong]]
 * [[User:OliverH|Oliver Heesakkers]]
 
 == Finnish == 
