--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -158,3 +158,7 @@ Or electronic paper display, EPD is used in many new devices such as the new Mot
 =====FM/Digital Radio(DAB) Reciever=====
 
 A nice feature would be a radio reciever: FM or even better: [http://en.wikipedia.org/wiki/Digital_Audio_Broadcasting Digital Audio Broadcast] (Digital Radio)
+
+=====V12 Embedded power source=====
+
+We'll need something beefy to power the next Neos for the above gadgets, I propose the use of a [http://www.ultimatestupidity.com/pics/1/diesel/ Embeddable Power Source], that with some miniturisation and a bit of design work should be workable as a possible solution.
