added wishlist template

--- a/Wishlist%2F3D_Viewport.mw
+++ b/Wishlist%2F3D_Viewport.mw
@@ -1,3 +1,4 @@
+{{Hardware Wishlist}}
 == 3D Viewport ==
 
 The 3d Viewport works much like a first person shooter game. But instead of using the mouse to control what you see, you simply move the Neo1973. To zoom in, move the phone closer to the virtual object. To see it from the other side, move the phone to the other side of the object.
