--- a/Wishlist%2FGames.mw
+++ b/Wishlist%2FGames.mw
@@ -1,3 +1,5 @@
+ TODO: Needs a lot cleaning up, initial import only
+
 === Games on OpenMoko ===
 
 This is the page to centralize the suggestions for creating games on the OpenMoko device.
