re-link battery

--- a/Neo_1973_Battery_Charging_Logic.mw
+++ b/Neo_1973_Battery_Charging_Logic.mw
@@ -1,6 +1,6 @@
 The [[Neo1973 Battery]] charging logic is embedded into our [[Neo1973 Hardware#Power_Management|PCF50606 PMU]] (Power Management Unit).
 
-The PCF50606 supports a variety of [[battery]] charging modes, based around the hardware limitations of USB.
+The PCF50606 supports a variety of [[Neo1973 Battery]] charging modes, based around the hardware limitations of USB.
 
 USB hubs may only provide up to 100mA per device.
 If more than the available current is drawn from them, they may be reset, or power off.
