/* Fast Charge (CCCV) */ re-link

--- a/Neo_1973_Battery_Charging_Logic.mw
+++ b/Neo_1973_Battery_Charging_Logic.mw
@@ -25,6 +25,6 @@ Thus, by default, if you apply +5V to the USB device socket, we draw only 100mA.
 
 ==== Fast Charge (CCCV) ====
 
-Fast charging, using first constant current, later constant voltage.  This is what we use for our Li-Ion [[Neo1973 battery]]
+Fast charging, using first constant current, later constant voltage.  This is what we use for our Li-Ion [[Neo1973 Battery]]
 
 ==== Fast Charge (CVCC) ====
