added to category

--- a/Wishlist%2FGames.mw
+++ b/Wishlist%2FGames.mw
@@ -50,3 +50,5 @@ What is not possible without magic tricks / an external controller:
 * Do USB controllers work with the unpowered USB? (Please answer if you know!)
 * Bluetooth controllers should be supported. I am especially thinking about the Nintendo Wii remote.
 * If version 2 of the hardware has an accelerometer a [http://www.rubylane.com/shops/molotov/item/SUN1769 tilt maze ball game] is possible.
+
+[[Category:Ideas]]
