changed category: see talk page

--- a/Wishlist%2FComputer_Mouse.mw
+++ b/Wishlist%2FComputer_Mouse.mw
@@ -35,4 +35,4 @@ See: [http://bemused.sourceforge.net/ bemused] - FOSS remote controll for Series
 See: [http://irowan.com/romeo/ romeo] - FOSS remote controll for Mac and Sony Ericsson so far<br>
 Or: Use VLC as a remote - AFAIK there is even a J2ME(JavaMicroedition) VLC implementation<br>--[[User:Minime|Minime]] 13:59, 19 February 2007 (CET)
 
-[[Category:Wishlist]]
+[[Category:Ideas]]
