changed category: see talk page

--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -160,4 +160,4 @@ wxWidgets team wants OpenMoko classes too and we (wxWidgets) plan to include thi
 === SDL Integration ===
 SDL is _the_ game developer library. There are tons of SDL games out there. We should add OpenMoko support into SDL.
 
-[[Category:Wishlist]]
+[[Category:Ideas]]
