/* Dutch */ LuitvD added

--- a/Translation.mw
+++ b/Translation.mw
@@ -35,6 +35,7 @@ Languages already offered on our community mailinglist, please add your name you
 * [[User:MarcVerwerft|Marc Verwerft]]
 * [[User:Madjo|Marcel De Jong]]
 * [[User:OliverH|Oliver Heesakkers]]
+* [[User:LuitvD|Luit van Drongelen]]
 
 == Finnish == 
 * [[User:Jani-Matti_Hätinen|Jani-Matti Hätinen]]
