potential use case: the gimp

--- a/Wishlist%2FGraphics_Tablet.mw
+++ b/Wishlist%2FGraphics_Tablet.mw
@@ -1,6 +1,8 @@
 {{Wishlist}}
 The Neo1973 has a touchscreen. The touchscreen can be used to control a pointer on the screen. Using communication to a PC the touchscreen can control the pointer on the PC. The communication can be either USB or Bluetooth. Using this it should be possible to emulate a simple graphics tablet.
 
+-- [[User:Xkr47|xkr47]]: yeah, I think it could be nice to use with [http://www.gimp.org/ The Gimp] :)
+
 == Option: Display screen on smartphone ==
 
 Depending on the bandwidth it may be possible to replicate either part of or a scaled down version of the PC's screen directly on the smartphone. To do this the driver must be a bit more advanced. It might consist of 2 parts: The graphics tablet driver and a facility to transfer the screen. VNC or FreeNX might solve this.
