--- a/Translation.mw
+++ b/Translation.mw
@@ -74,6 +74,7 @@ Languages already offered on our community mailinglist, please add your name you
 * [[User:OlegSverdlov|Oleg Sverdlov]]
 * [[User:DenisBY|Denis Kot]]
 * [[User:MikhailGusarov|Mikhail Gusarov]]
+* [[User:x-demon|Alexander Sokolow]]
 
 == Spanish ==
 * [[User:RosangelaCaninoKoning|Rosangela CaninoKoning]]
