--- a/Translation.mw
+++ b/Translation.mw
@@ -37,6 +37,9 @@ Languages already offered on our community mailinglist, please add your name you
 * [[User:OliverH|Oliver Heesakkers]]
 * [[User:LuitvD|Luit van Drongelen]]
 
+== Estonian ==
+* [[User:Hadara|Sven Petai]]
+
 == Finnish == 
 * [[User:Jani-Matti_Hätinen|Jani-Matti Hätinen]]
 * [[User:TuomoSipola|Tuomo Sipola]]
