--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -95,7 +95,9 @@ You may install this distribution on the microSD card, in order to [[Boot from s
 '''Networking'''
 * No Updates/Installation are possible or pings to domains because dns is not working. This problem occurs because the /etc/resolv.conf is empty by default. You have to fill it manually like just using the content of this file on your local machine, or DNS address. Then a line in /etc/network/interfaces is required:
 
-<math>up echo nameserver 192.168.0.200 >/etc/resolv.conf</math>
+
+up echo nameserver 192.168.0.200 >/etc/resolv.conf
+
 
 This is to be inserted below gateway address and above the bluetooth networking
 
