--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -96,10 +96,10 @@ You may install this distribution on the microSD card, in order to [[Boot from s
 * No Updates/Installation are possible or pings to domains because dns is not working. This problem occurs because the /etc/resolv.conf is empty by default. You have to fill it manually like just using the content of this file on your local machine, or DNS address. Then a line in /etc/network/interfaces is required:
 
 
-up echo nameserver 192.168.0.200 >/etc/resolv.conf
+ up echo nameserver 192.168.0.200 >/etc/resolv.conf
 
 
-This is to be inserted below gateway address and above the bluetooth networking
+*This is to be inserted below gateway address and above the bluetooth networking
 
 {{note| [http://en.wikipedia.org/wiki/Resolvconf resolvconf] is installed so should probably be used }}
 
