*Empty MediaWiki Message*

--- a/Tichy.mw
+++ b/Tichy.mw
@@ -2,7 +2,7 @@
 
 [[Image:Tichy-main.png|thumb|tichy main window]]
 [[Image:Tichy-drawing.png|thumb|tichy drawing app]]
-[[Image:Tichy-messages.png|thumb|tichy message app]]
+[[Image:Tichy-style.png|thumb|tichy message app]]
 [[Image:Tichy-Media.png|thumb|tichy freedesktop app]]
 
 == About ==
