*Empty MediaWiki Message*

--- a/Tichy.mw
+++ b/Tichy.mw
@@ -2,8 +2,9 @@
 
 [[Image:Tichy-main.png|thumb|tichy main window]]
 [[Image:Tichy-drawing.png|thumb|tichy drawing app]]
-[[Image:Tichy-style.png|thumb|tichy message app]]
+[[Image:Tichy-style.png|thumb|tichy style app]]
 [[Image:Tichy-Media.png|thumb|tichy freedesktop app]]
+[[Image:Tichy-Keyboard.png|thumb|tichy freedesktop app]]
 
 == About ==
 Tichy is a python applets manager for embedded devices.
