--- a/Tichy.mw
+++ b/Tichy.mw
@@ -4,7 +4,7 @@
 [[Image:Tichy-drawing.png|thumb|tichy drawing app]]
 [[Image:Tichy-style.png|thumb|tichy style app]]
 [[Image:Tichy-Media.png|thumb|tichy freedesktop app]]
-[[Image:Tichy-Keyboard.png|thumb|tichy freedesktop app]]
+[[Image:Tichy-Keyboard.png|thumb|tichy keyboard app]]
 
 == About ==
 Tichy is a python applets manager for embedded devices.
